# GameServerManager

./: .clang-format  .gitignore  AddCustomVMDialog.cpp  CLAUDE.md  CMakeLists.txt  CS2Page.cpp  CloudProviderBase.h  CreateVMDialog.cpp  CreateVMDialog.h  DeploymentTargetSelector.cpp  DeploymentTargetSelector.h  DockerManager.cpp  DockerManager.h  GameConsoleWidget.h  GenericGamePage.cpp  GenericGamePage.h  ImagePickerDialog.h  InfraPage.h  LICENSE  LoginWindow.cpp  MainWindow.cpp  MainWindow.h  MinecraftPage.cpp  MinecraftPage.h  PluginManagerWidget.h  README.md  ServerDashboard.cpp  ServerDashboard.h  ServerInstance.h  SideBar.cpp  SshTunnel.cpp  SshTunnel.h  VMAdminPage.cpp  build.bat  todo
.github/workflows/: release.yml
docs/: README.md  architecture.md  build.md  deploiement.md  faq.md  guide-utilisation.md  jeux.md
packaging/: sfx_config.txt
resources/: app.rc  games.qrc
src/: main.cpp
src/app/: LoginWindow.h  MainWindow.cpp  MainWindow.h  SideBar.cpp  SideBar.h
src/cloud/: ScalewayProvider.cpp  ScalewayProvider.h  VMStorage.cpp  VMStorage.h
src/dialogs/: AddCustomVMDialog.cpp  AddCustomVMDialog.h  HelpDialog.cpp  HelpDialog.h  ImagePickerDialog.cpp  ImagePickerDialog.h  WelcomeDialog.cpp  WelcomeDialog.h
src/docker/: DockerManager.cpp  DockerManager.h  RemoteShell.cpp  RemoteShell.h
src/models/: GamePageConfig.h  ServerInstance.h  VMInstance.h
src/pages/: CS2Page.cpp  CS2Page.h  DockerSettingsPage.cpp  DockerSettingsPage.h  GenericGamePage.cpp  GenericGamePage.h  InfraPage.cpp  MinecraftPage.cpp  MinecraftPage.h  VMAdminPage.cpp  VMAdminPage.h
src/widgets/: ConfigEditorWidget.cpp  ConfigEditorWidget.h  GameBanner.h  GameConsoleWidget.cpp  GameLogsWidget.cpp  GameLogsWidget.h  PluginManagerWidget.cpp  ServerDashboard.cpp  ServerDashboard.h  ServerPanelState.h  ServerSettingsWidget.cpp  ServerSettingsWidget.h
